// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processNextPhase should process to next phase preflop, fold -> fold -> call -> check 1`] = `
Object {
  "_id": "000000010000000000000000",
  "betMap": Object {},
  "currentBets": Array [
    0.5,
  ],
  "dealerPosition": 1,
  "isPlaying": true,
  "phases": Array [
    Object {
      "cards": Array [],
      "moves": Array [
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000006",
        },
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000001",
        },
        Object {
          "amount": 0.5,
          "moveType": "call",
          "userId": "000000000000000000000002",
        },
        Object {
          "amount": 0,
          "moveType": "check",
          "userId": "000000000000000000000004",
        },
      ],
      "type": "pre-flop",
    },
    Object {
      "cards": Array [
        Object {
          "card": 2,
          "color": "s",
        },
        Object {
          "card": 3,
          "color": "d",
        },
        Object {
          "card": 3,
          "color": "s",
        },
      ],
      "moves": Array [],
      "type": "flop",
    },
  ],
  "players": Array [
    Object {
      "money": 50,
      "seat": 1,
      "userId": "000000000000000000000001",
    },
    Object {
      "money": 49.5,
      "seat": 2,
      "userId": "000000000000000000000002",
    },
    Object {
      "money": 49.5,
      "seat": 4,
      "userId": "000000000000000000000004",
    },
    Object {
      "money": 50,
      "seat": 6,
      "userId": "000000000000000000000006",
    },
  ],
  "pot": 1,
  "stakes": 50,
  "tableId": null,
}
`;

exports[`processNextPhase should process to next phase preflop, fold -> fold -> call -> raise -> call 1`] = `
Object {
  "_id": "000000010000000000000000",
  "betMap": Object {},
  "currentBets": Array [
    0.5,
    5,
  ],
  "dealerPosition": 1,
  "isPlaying": true,
  "phases": Array [
    Object {
      "cards": Array [],
      "moves": Array [
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000006",
        },
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000001",
        },
        Object {
          "amount": 0.5,
          "moveType": "call",
          "userId": "000000000000000000000002",
        },
        Object {
          "amount": 5,
          "moveType": "raise",
          "userId": "000000000000000000000004",
        },
        Object {
          "amount": 5,
          "moveType": "call",
          "userId": "000000000000000000000002",
        },
      ],
      "type": "pre-flop",
    },
    Object {
      "cards": Array [
        Object {
          "card": 2,
          "color": "s",
        },
        Object {
          "card": 3,
          "color": "d",
        },
        Object {
          "card": 3,
          "color": "s",
        },
      ],
      "moves": Array [],
      "type": "flop",
    },
  ],
  "players": Array [
    Object {
      "money": 50,
      "seat": 1,
      "userId": "000000000000000000000001",
    },
    Object {
      "money": 45,
      "seat": 2,
      "userId": "000000000000000000000002",
    },
    Object {
      "money": 45,
      "seat": 4,
      "userId": "000000000000000000000004",
    },
    Object {
      "money": 50,
      "seat": 6,
      "userId": "000000000000000000000006",
    },
  ],
  "pot": 10,
  "stakes": 50,
  "tableId": null,
}
`;
